[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/UIComponents/InventoryInfo.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/UI.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/UIComponents/Shop.gd" type="Script" id=3]

[node name="Shop" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -180.0
margin_right = 200.0
margin_bottom = 140.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 19
patch_margin_right = 20
patch_margin_bottom = 16
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -163.0
margin_right = 202.0
margin_bottom = 163.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Display"]
margin_right = 404.0
margin_bottom = 19.0
text = "Try to Sell"
align = 1

[node name="InventoryInfo" parent="Display" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 31.0
margin_right = 404.0
margin_bottom = 231.0

[node name="Accept" type="Button" parent="Display"]
margin_top = 243.0
margin_right = 404.0
margin_bottom = 263.0
rect_min_size = Vector2( 200, 0 )
text = "Haggle (-1 Market action Point)"

[node name="Cancel" type="Button" parent="Display"]
margin_top = 275.0
margin_right = 404.0
margin_bottom = 295.0
text = "Cancel"

[connection signal="pressed" from="Display/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Display/Cancel" to="." method="_on_Cancel_pressed"]
